Continued finalising implementation